--- a/index.html
+++ b/index.html
@@ -1,96 +1,43 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mesto</title>
-    <link rel="stylesheet" href="./pages/index.css">
+    <title>Regular Expressions</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
-
 <body>
-    <div class="root">
-        <header class="header root__section">
-            <img src="./images/logo.svg" alt="mesto logo" class="logo">
-        </header>
-        <div class="profile root__section">
-            <div class="user-info">
-                <div class="user-info__photo"></div>
-                <div class="user-info__data">
-                    <h1 class="user-info__name"></h1>
-                    <p class="user-info__job"></p>
-                    <button class="button user-info__button_edit">Edit</button>
-                </div>
-                <button class="button user-info__button">+</button>
-            </div>
+    <header class="header">
+        <img class="header__logo" src="https://pictures.s3.yandex.net/frontend-developer/dom_bom/logo.svg" alt="logo">
+        <p class="header__logo-sub">Регулярные выражения</p>
+    </header>
+    <main class="container">
+        <div class="cover">
+            <div class="cover__image"></div>
+            <h1 class="cover__heading">RegExp</h1>
         </div>
-        <div class="places-list root__section">
-
+        <div class="block">
+            <form class="form" name="register" action="http://httpbin.org/post" method="POST">
+                <h3>Форма регистрации</h3>
+                <fieldset class="form__fieldset">
+                    <div class="form__field">
+                        <input class="form__input" type="text" name="name" pattern="" placeholder="Имя" required />
+                    </div>
+                    <div class="form__field">
+                        <input class="form__input" type="email" name="email" pattern="" placeholder="E-Mail" required />
+                        <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
+                    </div>
+                    <div class="form__field">
+                        <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="" minlength="18" maxlength="18"  required/>
+                        <span class="form__error">телефон в формате: +7 (900) 000-00-00</span>
+                    </div>
+                    <div class="form__field">
+                        <input class="form__input" type="url" name="url" pattern="" placeholder="Ваш сайт" required/>
+                        <span class="form__error">URL в формате: http://mysite.ru</span>
+                    </div>
+                    <button class="form__button" type="submit">Отправить</button>
+                </fieldset>
+            </form>
         </div>
-        <div class="popup" id="imagePopup">
-            <div class="popup__content">
-                <img src="" alt="" class="popup__image">
-                <!--сюда будет вставляться картинка скриптом-->
-                <img src="./images/close.svg" alt="" class="popup__close">
-            </div>
-        </div>
-        <div class="popup" id="avatarPopup">
-            <div class="popup__content">
-                <img src="./images/close.svg" alt="" class="popup__close">
-                <h3 class="popup__title">Обновить аватар</h3>
-                <form class="popup__form" name="newAvatar" novalidate>
-                    <input type="text" name="linkAvatar" pattern="^http.*\.(jpg|png|gif|bmp)$" class="popup__input popup__input_true" placeholder="Ссылка на картинку аватара" required>
-                    <p class="popup__error popup__error_false"></p>
-                    <button type="submit" class="button popup__button popup__button_true" disabled>Сохранить</button>
-                </form>
-            </div>
-        </div>
-        <div class="popup" id="newPlacePopup">
-            <div class="popup__content">
-                <img src="./images/close.svg" alt="" class="popup__close">
-                <h3 class="popup__title">Новое место</h3>
-                <form class="popup__form" name="new" novalidate>
-                    <input type="text" name="place" maxlength="30" minlength="2" class="popup__input popup__input_true" placeholder="Название" required>
-                    <p class="popup__error popup__error_false"></p>
-                    <input type="text" name="link" pattern="^http.*\.(jpg|png|gif|bmp)$" class="popup__input popup__input_true" placeholder="Ссылка на картинку" required>
-                    <p class="popup__error popup__error_false"></p>
-                    <button type="submit" class="button popup__button popup__button_true" disabled>+</button>
-                </form>
-            </div>
-        </div>
-        <div class="popup" id="editProfilePopup">
-            <div class="popup__content">
-                <img src="./images/close.svg" alt="" class="popup__close">
-                <h3 class="popup__title">Редактировать профиль</h3>
-                <form class="popup__form" name="edit" novalidate>
-                    <input type="text" id="profileName" name="name" maxlength="30" minlength="2" class="popup__input popup__input_true" placeholder="Имя" required>
-                    <p class="popup__error popup__error_false"></p>
-                    <input type="text" id="profileAbout" name="about" maxlength="30" minlength="2" class="popup__input popup__input_true" placeholder="О себе" required>
-                    <p class="popup__error popup__error_false"></p>
-                    <button type="submit" class="button popup__button popup__button_true" disabled>Сохранить</button>
-                </form>
-            </div>
-        </div>
-    </div>
-    <!--    <script src="js/initialCards.js"></script>-->
-    <script src="js/Api.js"></script>
-    <script src="js/FormValidator.js"></script>
-    <script src="js/CardList.js"></script>
-    <script src="js/Popup.js"></script>
-    <script src="js/UserInfo.js"></script>
-    <script src="js/script.js"></script>
-
-
-
-
-
-    <script src="js/Card.js"></script>
-
-
-
-
-
+    </main>     
 </body>
-
 </html>
