--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <input class="form__input" minlength="2" maxlength="20" type="text" name="name" pattern="[А-Я]{1}[а-яё]{1,}[-]*([А-Я]{1}[а-яё]{1,})*" placeholder="Имя" required />
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="email" name="email" pattern="" placeholder="E-Mail" required />
+                        <input class="form__input" type="email" name="email" pattern="[A-Za-z1-9_-]+@[A-Za-z1-9_-]+.[a-z]{2,3}" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div>
                     <div class="form__field">
