--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <span class="form__error">телефон в формате: +7 (900) 000-00-00</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="url" name="url" pattern="" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="text" name="url" pattern="http[s]{0,1}://[www.]*(\d{3}\.\d{3}\.\d{3}\.\d{3}){0,1}(\w+\.[a-zа-я]{2,3}){0,1}(:\d{2,5}){0,1}[A-Za-z/0-9]*[#]{0,1}$" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
