--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
                         <input class="form__input" minlength="2" maxlength="20" type="text" name="name" pattern="^[А-Я]{1}[а-яё]+-*([А-Я][а-яё]+)*$" placeholder="Имя" required />
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="email" name="email" pattern="^[A-Za-z1-9_\-\.]+@[A-Za-z0-9_-]+\.[\.a-z]+$" placeholder="E-Mail" required />
+                        <input class="form__input" type="email" name="email" pattern="^[A-Za-z1-9_\-\.]{2,}@[A-Za-z0-9_-]{2,}\.[\.a-z]{2,}$" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="(\+7(\([0-9]{3}\) *[0-9]{3}-[0-9]{2}-[0-9]{2}| [0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}|[0-9]{10})|8[0-9]{10})" minlength="10" maxlength="18" required/>
+                        <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="^(\+7(\([0-9]{3}\) *[0-9]{3}-[0-9]{2}-[0-9]{2}| [0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}|[0-9]{10})|8[0-9]{10})$" minlength="10" maxlength="18" required/>
                         <span class="form__error">телефон в формате: +7 (900) 000-00-00</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="url" pattern="^https{0,1}:\/\/[www.]*(\d{3}\.\d{3}\.\d{3}\.\d{3}){0,1}(\w+\.[a-zа-я]+){0,1}(:\d{2,5}){0,1}[A-Za-z/0-9]*[#]{0,1}$" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="text" name="url" pattern="https{0,1}://(www\.){0,1}[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}(:[0-9]{2,5}){0,1}(/(?=\w)[\w/\-\._]*#{0,1}){0,1}|https{0,1}://(www\.){0,1}[\w\-_0-9]{2,}\.\w{2,}(:[0-9]{2,5}){0,1}(/(?=\w)[\w/\-\._]*#{0,1}){0,1}" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
