--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <span class="form__error">телефон в формате: +7 (900) 000-00-00</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="url" pattern="^https{0,1}://(www\.){0,1}[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}(:[0-9]{2,5}){0,1}(/(?=\w)[\w/\-\._]*#{0,1}){0,1}|https{0,1}://(www\.){0,1}[\w\-_0-9]{2,}\.\w{2,}(:[0-9]{2,5}){0,1}(/(?=\w)[\w/\-\._]*#{0,1}){0,1}$" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="text" name="url" pattern="^https?:\/\/(www\.)?[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}(:[0-9]{2,5})?(\/(?=\w)[\w\/\-\._]*#?)?|https{0,1}:\/\/(www\.)?[\w\-_0-9]{2,}\.\w{2,}(:[0-9]{2,5})?(\/(?=\w)[\w\/\-\._]*#?)?$" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
